--- a/TalabatPL/appsettings.json
+++ b/TalabatPL/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-RB8K8R4\\SQLEXPRESS;Initial Catalog=TalabatDbSelf;Integrated Security=True;TrustServerCertificate=True"
-  }
+  },
+  "ApiBaseUrl": "https://localhost:7299"
 }
